	Graphics
		Upgraded pixi.js from version 4.4.1 to 5.1.6
		Rewrote the gradient shader. Lots of extra steps removed and it's now fully documented
		UI color changes now happen instantly instead of being delayed for up to three seconds
		Applied better image compression, reducing asset filesize by 45% (55KB)
	New player experience
		Changed the separator character in the upper left to be less confusing
		Added new biome icons to better represent setting and reduce confusing icon reuse
		Made the first upgrade display onscreen earlier and lowered the price
		Increased visibility of inactive biome icons
	Other Bugfixes
		Fixed a bug where the availability of shape30 upgrades didn't work as intended
		Fixed three bugs that would result in inaccurate preloader console messages
		Fixed a tiny edge case bug when purchasing biome 4
	Code Cleanup
		Changed some CSS to prevent having two versions for iFrame and standalone hosting
		Reduced number of Javascript var declarations from 269 to 26
		Fixed all setTimeout() string evaluation anti-patterns
		Replaced complicated Javascript fade animations with two lines of CSS
		Fixed many negative margin CSS anti-patterns
		Moved most of the inline CSS to classes
		Removed some utility functions that weren't being used anywhere
		Removed some commented-out code, improved a few bits of confusing code
		Stripped trailing whitespace and replaced overlooked space-indents with tabs
	Devtools
		Improved unlockEverythingDevHack() to more effectively test all three game phases
		Added new console messages for background music




v1.02 - Chrome breaks web audio standards
	Added a 'click to start' page to account for the new Chrome autoplay protection
	Fixed a bug that would sometimes crash the loading screen

v1.01 - Day 1 bugs
	Fixed a bug that exposed a piece of the end credits scene, allowing accidental page resets

v1.0 - Initial Release
	TRANSCEND, DIAMOND, and RAINBOW phases
	17 BGM tracks